[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/SingleFlame.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SpinningFlame.gd" type="Script" id=2]

[node name="SpinningFlame" type="Node2D"]
script = ExtResource( 2 )

[node name="Flame" parent="." instance=ExtResource( 1 )]

[node name="Flame2" parent="." instance=ExtResource( 1 )]

[node name="Flame3" parent="." instance=ExtResource( 1 )]

[node name="Flame4" parent="." instance=ExtResource( 1 )]

[node name="Flame5" parent="." instance=ExtResource( 1 )]

[node name="Flame6" parent="." instance=ExtResource( 1 )]

[node name="Flame7" parent="." instance=ExtResource( 1 )]

[node name="Flame8" parent="." instance=ExtResource( 1 )]

[node name="RotationPoint" type="Node2D" parent="."]

[node name="FlamePos" type="Position2D" parent="RotationPoint"]
position = Vector2( -50, 0 )

[node name="FlamePos2" type="Position2D" parent="RotationPoint"]
position = Vector2( -35.355, -35.355 )

[node name="FlamePos3" type="Position2D" parent="RotationPoint"]
position = Vector2( 0, -50 )

[node name="FlamePos4" type="Position2D" parent="RotationPoint"]
position = Vector2( 35.355, -35.355 )

[node name="FlamePos5" type="Position2D" parent="RotationPoint"]
position = Vector2( 50, 0 )

[node name="FlamePos6" type="Position2D" parent="RotationPoint"]
position = Vector2( 35.355, 35.355 )

[node name="FlamePos7" type="Position2D" parent="RotationPoint"]
position = Vector2( 0, 50 )

[node name="FlamePos8" type="Position2D" parent="RotationPoint"]
position = Vector2( -35.355, 35.355 )
